--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -101,6 +101,12 @@
       "subscription": {
         "type": "keyword",
         "normalizer": "lowercase_normalizer"
+      },
+      "state": {
+        "type": "keyword"
+      },
+      "taskName": {
+        "type": "keyword"
       }
     }
   }
