--- a/apple/swiftgraphql.yml
+++ b/apple/swiftgraphql.yml
@@ -13,3 +13,16 @@ scalars:
   SanitizedString_undefined_4000: String
   SanitizedString_undefined_8000: String
   SanitizedString_undefined_undefined: String
+  SanitizedString_undefined_40_undefined: String
+  SanitizedString_undefined_64_undefined: String
+  SanitizedString_undefined_95_undefined: String
+  SanitizedString_undefined_15_undefined: String
+  SanitizedString_undefined_50_undefined: String
+  SanitizedString_undefined_100_undefined: String
+  SanitizedString_undefined_300_undefined: String
+  SanitizedString_undefined_400_undefined: String
+  SanitizedString_undefined_2000_undefined: String
+  SanitizedString_undefined_4000_undefined: String
+  SanitizedString_undefined_8000_undefined: String
+  SanitizedString_undefined_undefined_undefined: String
+  SanitizedString_undefined_undefined_AFaf096AFaf093: String
