--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -13,7 +13,9 @@
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.3.1",
-    "puppeteer-core": "^7.1.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-adblocker": "^2.12.0",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
