--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^0.1.1",
+    "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dialog": "^0.1.1",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "@radix-ui/react-id": "^0.1.1",
