--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -62,6 +62,7 @@
     "jwks-rsa": "^2.0.3",
     "knex": "0.21.12",
     "knex-stringcase": "^1.4.2",
+    "linkedom": "^0.14.9",
     "luxon": "^2.3.1",
     "nanoid": "^3.1.25",
     "nodemailer": "^6.7.3",
