--- a/packages/readabilityjs/package.json
+++ b/packages/readabilityjs/package.json
@@ -30,11 +30,11 @@
     "jsdom": "^19.0",
     "mocha": "^8.2.0",
     "puppeteer": "^10.1.0",
-    "sinon": "^7.3.2"
+    "sinon": "^7.3.2",
+    "linkedom": "^0.14.9"
   },
   "dependencies": {
     "html-entities": "^2.3.2",
-    "linkedom": "^0.14.9",
     "modern-random-ua": "^1.0.3",
     "parse-srcset": "^1.0.2"
   }
