--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "linkedom": "^0.14.9",
     "luxon": "^2.3.1",
     "puppeteer-core": "^13.7.0",
     "puppeteer-extra": "^3.2.3",
