--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -8,6 +8,7 @@
     "@google-cloud/storage": "^5.18.1",
     "@sentry/serverless": "^6.13.3",
     "axios": "^0.26.0",
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.9",
