enable remote-notifications in plist

--- a/apple/InfoPlists/Omnivore.plist
+++ b/apple/InfoPlists/Omnivore.plist
@@ -55,6 +55,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
