Add language in mappings

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -120,6 +120,9 @@
       },
       "taskName": {
         "type": "keyword"
+      },
+      "language": {
+        "type": "keyword"
       }
     }
   }
