--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,13 @@ services:
       - PG_USER=postgres
       - PG_PASSWORD=postgres
       - PG_DB=omnivore
-      - ES_URL=http://elastic:9200
-      - ES_USERNAME=blank
-      - ES_PASSWORD=blank
+      - ELASTIC_URL=http://elastic:9200
+      - ELASTIC_USERNAME=blank
+      - ELASTIC_PASSWORD=blank
     depends_on:
       postgres:
+        condition: service_healthy
+      elastic:
         condition: service_healthy
 
   elastic:
