--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -89,6 +89,7 @@
     "@types/analytics-node": "^3.1.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
@@ -109,6 +110,7 @@
     "@types/uuid": "^8.3.0",
     "@types/voca": "^1.4.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "chai-string": "^1.5.0",
     "circular-dependency-plugin": "^5.2.0",
     "mocha": "^9.0.1",
