Add labels in highlight properties

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -90,6 +90,27 @@
           },
           "updatedAt": {
             "type": "date"
+          },
+          "labels": {
+            "type": "nested",
+            "properties": {
+              "id": {
+                "type": "keyword"
+              },
+              "name": {
+                "type": "keyword",
+                "normalizer": "lowercase_normalizer"
+              },
+              "color": {
+                "type": "keyword"
+              },
+              "description": {
+                "type": "text"
+              },
+              "createdAt": {
+                "type": "date"
+              }
+            }
           }
         }
       },
