use schema.graphql as source of truth for gql rather than TS

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,6 @@
 overwrite: true
-schema: 'packages/api/src/schema.ts'
+schema: 'packages/api/src/generated/schema.graphql'
 generates:
-  packages/api/src/generated/schema.graphql:
-    plugins:
-      - schema-ast
   packages/api/src/generated/graphql.ts:
     plugins:
       - 'typescript'
