Add readAt field to page properties

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -124,6 +124,9 @@
       "language": {
         "type": "keyword",
         "normalizer": "lowercase_normalizer"
+      },
+      "readAt": {
+        "type": "date"
       }
     }
   }
