Use nativeMessaging permission in Safari extension but not Chrome

--- a/apple/Makefile
+++ b/apple/Makefile
@@ -7,4 +7,4 @@ graphql_gen:
 extension_gen:
 	pushd ../pkg/extension/ && yarn build-prod && popd
 	cp -r ../pkg/extension/dist/* Sources/SafariExtension/Resources/.
-	cat ../pkg/extension/dist/manifest.json | jq '.background.persistent = false' > Sources/SafariExtension/Resources/manifest.json
+	cat ../pkg/extension/dist/manifest.json | jq '.background.persistent = false' | jq '.permissions = ["activeTab", "storage", "nativeMessaging", "https://*/**", "http://*/**"]' > Sources/SafariExtension/Resources/manifest.json
