--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,10 +125,10 @@ services:
   content-fetch:
     build:
       context: .
-      dockerfile: ./packages/puppeteer-parse/Dockerfile
+      dockerfile: ./packages/content-fetch/Dockerfile
     container_name: "omnivore-content-fetch"
-    expose:
-      - 9090
+    ports:
+      - "9090:9090"
     environment:
       - JWT_SECRET=some_secret
       - REST_BACKEND_ENDPOINT=http://api:8080/api
