Fix content-fetch on docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,7 +93,7 @@ services:
       - SSO_JWT_SECRET=some_sso_secret
       - CLIENT_URL=http://localhost:3000
       - GATEWAY_URL=http://localhost:8080/api
-      - PUPPETEER_TASK_HANDLER_URL=http://content-fetch:9090/
+      - PUPPETEER_TASK_HANDLER_URL=http://content-fetch:8080/?token=some_token
       - REMINDER_TASK_HANDLER_URL=/svc/reminders/trigger
     depends_on:
       migrate:
@@ -127,10 +127,11 @@ services:
       context: .
       dockerfile: ./packages/content-fetch/Dockerfile
     container_name: "omnivore-content-fetch"
-    ports:
-      - "9090:9090"
+    expose:
+      - 9090
     environment:
       - JWT_SECRET=some_secret
+      - VERIFICATION_TOKEN=some_token
       - REST_BACKEND_ENDPOINT=http://api:8080/api
     depends_on:
       api:
