--- a/packages/content-fetch/Dockerfile
+++ b/packages/content-fetch/Dockerfile
@@ -36,11 +36,16 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 ENV CHROMIUM_PATH /usr/bin/chromium-browser
 ENV LAUNCH_HEADLESS=true
 
-COPY . /app/
-WORKDIR app
+COPY package.json .
+COPY yarn.lock .
+COPY tsconfig.json .
+COPY .prettierrc .
+COPY .eslintrc .
+
+COPY /packages/content-fetch ./packages/content-fetch
 
 RUN yarn install --pure-lockfile
 
 EXPOSE 8080
 
-ENTRYPOINT ["yarn", "start"]
+CMD ["yarn", "workspace", "@omnivore/content-fetch", "start"]
