Use a different Dockerfile for content-fetch with App Engine and docker-compose

--- a/packages/content-fetch/Dockerfile-local
+++ b/packages/content-fetch/Dockerfile-local
@@ -1,3 +1,4 @@
+
 FROM node:14.18-alpine
 
 # Installs latest Chromium (92) package.
@@ -9,6 +10,10 @@ RUN apk add --no-cache \
       ca-certificates \
       ttf-freefont \
       nodejs \
+      gcc \
+      g++ \
+      python3 \
+      make \
       yarn
 
 # Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
@@ -31,12 +36,16 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 ENV CHROMIUM_PATH /usr/bin/chromium-browser
 ENV LAUNCH_HEADLESS=true
 
-COPY . /app/
-WORKDIR app
+COPY package.json .
+COPY yarn.lock .
+COPY tsconfig.json .
+COPY .prettierrc .
+COPY .eslintrc .
+
+COPY /packages/content-fetch ./packages/content-fetch
 
 RUN yarn install --pure-lockfile
 
 EXPOSE 8080
 
-ENTRYPOINT ["yarn", "start"]
-
+CMD ["yarn", "workspace", "@omnivore/content-fetch", "start"]
