add google url scheme

--- a/apple/InfoPlists/MacOmnivore.plist
+++ b/apple/InfoPlists/MacOmnivore.plist
@@ -28,6 +28,14 @@
 				<string>omnivore</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.267918240109-bdghlau7nsq2480c4l8gdgh6mrarokta</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
