--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
     "cookie": "^0.5.0",
     "diff-match-patch": "^1.0.5",
     "graphql-request": "^3.6.1",
+    "kbar": "^0.1.0-beta.35",
     "nanoid": "^3.1.29",
     "next": "^12.1.0",
     "phosphor-react": "^1.4.0",
