--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -56,7 +56,7 @@ services:
       - SSO_JWT_SECRET=some_sso_secret
       - CLIENT_URL=http://localhost:3000
       - GATEWAY_URL=http://localhost:8080/api
-      - PUPPETEER_TASK_HANDLER_URL=http://localhost:9090/
+      - CONTENT_FETCH_URL=http://localhost:9090/
       - REMINDER_TASK_HANDLER_URL=/svc/reminders/trigger
       - BOOKMARKLET_JWT_SECRET=some_bookmarklet_secret
       - BOOKMARKLET_VERSION=1.0.0
