Use mocha-unfunk-reporter with the API tests
This should give us better reporting of failures in GitHub
Actions.

--- a/packages/api/mocha-config.json
+++ b/packages/api/mocha-config.json
@@ -1,5 +1,6 @@
 {
   "extension": ["ts"],
   "spec": "test/**/*.test.ts",
+  "reporter": "mocha-unfunk-reporter",
   "require": ["test/babel-register.js", "test/global-setup.ts", "test/global-teardown.ts"]
 }
