--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -53,6 +53,7 @@
     "firebase-admin": "^10.0.2",
     "googleapis": "^105.0.0",
     "graphql": "^15.3.0",
+    "graphql-fields": "^2.0.3",
     "graphql-middleware": "^6.0.10",
     "graphql-shield": "^7.5.0",
     "highlightjs": "^9.16.2",
@@ -95,6 +96,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/dompurify": "^2.0.4",
     "@types/express": "^4.17.7",
+    "@types/graphql-fields": "^1.3.4",
     "@types/highlightjs": "^9.12.2",
     "@types/intercom-client": "^2.11.8",
     "@types/jsonwebtoken": "^8.5.0",
