--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,6 +29,7 @@
     "@segment/analytics-next": "^1.33.5",
     "@sentry/nextjs": "^6.16.1",
     "@stitches/react": "^1.2.5",
+    "color2k": "^2.0.0",
     "cookie": "^0.5.0",
     "diff-match-patch": "^1.0.5",
     "graphql-request": "^3.6.1",
