make siteName as search_as_you_type

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -130,7 +130,7 @@
         "type": "date"
       },
       "siteName": {
-        "type": "text"
+        "type": "search_as_you_type"
       },
       "subscription": {
         "type": "keyword",
