--- a/packages/content-fetch/package.json
+++ b/packages/content-fetch/package.json
@@ -10,9 +10,7 @@
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.9",
     "luxon": "^2.3.1",
-    "puppeteer-core": "^15.3.2",
-    "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-stealth": "^2.9.0"
+    "puppeteer-core": "^15.3.2"
   },
   "scripts": {
     "start": "node app.js",
