--- a/pkg/extension/package.json
+++ b/pkg/extension/package.json
@@ -22,5 +22,8 @@
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
