--- a/pkg/extension/.env.production
+++ b/pkg/extension/.env.production
@@ -1,3 +1,3 @@
 OMNIVORE_URL="https://omnivore.app"
-OMNIVORE_GRAPHQL_URL="https://omnivore.app/api/"
+OMNIVORE_GRAPHQL_URL="https://api-prod.omnivore.app/api/"
 EXTENSION_NAME="Omnivore"
