--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -25,3 +25,6 @@ TWITTER_BEARER_TOKEN=
 PREVIEW_IMAGE_WRAPPER_ID='selected_highlight_wrapper'
 REMINDER_TASK_HANDLER_URL=
 ELASTIC_URL=http://localhost:9200
+SENDER_MESSAGE=msgs@sender.domain
+SENDER_FEEDBACK=feedback@sender.domain
+SENDER_GENERAL=no-reply@sender.domain
