--- a/packages/inbound-email-handler/package.json
+++ b/packages/inbound-email-handler/package.json
@@ -23,6 +23,7 @@
     "@types/addressparser": "^1.0.1",
     "@types/json-bigint": "^1.0.1",
     "@types/node": "^14.11.2",
+    "@types/rfc2047": "^2.0.1",
     "eslint-plugin-prettier": "^4.0.0"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "parse-headers": "^2.0.4",
-    "parse-multipart-data": "^1.2.1"
+    "parse-multipart-data": "^1.2.1",
+    "rfc2047": "^4.0.1"
   }
 }
