--- a/apple/Entitlements/Omnivore.entitlements
+++ b/apple/Entitlements/Omnivore.entitlements
@@ -8,6 +8,16 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:omnivore.app</string>
+		<string>applinks:dev.omnivore.app</string>
+		<string>applinks:demo.omnivore.app</string>
+		<string>webcredentials:omnivore.app</string>
+		<string>webcredentials:dev.omnivore.app</string>
+	</array>
+	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
+	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.app.omnivoreapp</string>
@@ -15,12 +25,6 @@
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)app.omnivore.shared</string>
-	</array>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:omnivore.app</string>
-		<string>applinks:dev.omnivore.app</string>
-		<string>applinks:demo.omnivore.app</string>
 	</array>
 </dict>
 </plist>
