--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,6 +36,7 @@
     "@sentry/integrations": "^6.19.1",
     "@sentry/node": "^5.26.0",
     "@sentry/tracing": "^5.26.0",
+    "addressparser": "^1.0.1",
     "analytics-node": "^6.0.0",
     "apollo-datasource": "^3.3.1",
     "apollo-server-express": "^3.6.3",
