--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -88,6 +88,7 @@
   "devDependencies": {
     "@babel/register": "^7.14.5",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/addressparser": "^1.0.1",
     "@types/analytics-node": "^3.1.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.18",
