--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,6 +38,7 @@
     "next": "^12.1.0",
     "phosphor-react": "^1.4.0",
     "pspdfkit": "^2022.2.3",
+    "pulling": "^2.0.1",
     "react": "^17.0.2",
     "react-apple-login": "^1.1.3",
     "react-colorful": "^5.5.1",
