--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,12 +38,12 @@
     "next": "^12.1.0",
     "phosphor-react": "^1.4.0",
     "pspdfkit": "^2022.2.3",
-    "pulling": "^2.0.1",
     "react": "^17.0.2",
     "react-apple-login": "^1.1.3",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-super-responsive-table": "^5.2.1",
     "react-topbar-progress-indicator": "^4.1.1",
     "react-twitter-widgets": "^1.10.0",
