--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -46,6 +46,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
+    "diff-match-patch": "^1.0.5",
     "dompurify": "^2.0.17",
     "dot-case": "^3.0.4",
     "dotenv": "^8.2.0",
@@ -96,6 +97,7 @@
     "@types/chai-string": "^1.4.2",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/diff-match-patch": "^1.0.32",
     "@types/dompurify": "^2.0.4",
     "@types/express": "^4.17.7",
     "@types/graphql-fields": "^1.3.4",
