--- a/android/Omnivore/build.gradle
+++ b/android/Omnivore/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
+        lifecycle_version = '2.5.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
