add datastore dep to gradle

--- a/android/Omnivore/app/build.gradle
+++ b/android/Omnivore/app/build.gradle
@@ -98,5 +98,8 @@ dependencies {
 // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+
+    implementation "androidx.security:security-crypto:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 
