add dagger hilt android deps

--- a/android/Omnivore/build.gradle
+++ b/android/Omnivore/build.gradle
@@ -3,6 +3,11 @@ buildscript {
         compose_version = '1.1.0-beta01'
         lifecycle_version = '2.5.1'
     }
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.43.2"
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
@@ -13,3 +18,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
