--- a/android/Omnivore/app/build.gradle
+++ b/android/Omnivore/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -101,5 +103,17 @@ dependencies {
 
     implementation "androidx.security:security-crypto:1.0.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+
+
+// Activity KTX for viewModels()
+    // TODO: remove this since compose-activity imports ktx?
+//    implementation "androidx.activity:activity-ktx:1.3.1"
+
+//Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.43.2'
+    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 }
 
