login with email and save token to datastore

--- a/android/Omnivore/app/src/main/AndroidManifest.xml
+++ b/android/Omnivore/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="app.omnivore.omnivore">
 
     <application
+        android:name=".OmnivoreApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
