--- a/android/Omnivore/build.gradle
+++ b/android/Omnivore/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.43.2"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+        classpath "com.android.tools.build:gradle:7.2.1"
     }
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -13,6 +14,9 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+//    id 'com.android.application' version '7.2.2' apply false
+//    id 'com.android.library' version '7.2.2' apply false
+//    id 'org.jetbrains.kotlin.android' version '1.7.20-Beta' apply false
 }
 
 task clean(type: Delete) {
