Update vercel ignore to ignore some of our new services

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,14 +1,20 @@
 /pkg
 /.gcp
 /.github
+/android
 /apple
 /docs
 /e2e
 /imageproxy
 /packages/api
+/packages/appreader
 /packages/data-exploration
 /packages/db
+/packages/content-fetch
+/packages/cypress
 /packages/gcf-shared
+/packages/import-handler
+/packages/inbound-email-handler
 /packages/readabilityjs
 /packages/pdf-handler
 /packages/puppeteer-parse
