--- a/android/Omnivore/build.gradle
+++ b/android/Omnivore/build.gradle
@@ -6,13 +6,13 @@ buildscript {
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
-        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath 'com.android.tools.build:gradle:7.2.2'
     }
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
 //    id 'com.android.application' version '7.2.2' apply false
 //    id 'com.android.library' version '7.2.2' apply false
