--- a/android/Omnivore/build.gradle
+++ b/android/Omnivore/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.3.0-alpha03'
         lifecycle_version = '2.5.1'
+        kotlin_version = '1.6.20'
     }
 
     dependencies {
@@ -13,7 +14,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
 //    id 'com.android.application' version '7.2.2' apply false
 //    id 'com.android.library' version '7.2.2' apply false
 //    id 'org.jetbrains.kotlin.android' version '1.7.20-Beta' apply false
