Use a ModalBottomSheet for saving on Android

--- a/android/Omnivore/app/src/main/AndroidManifest.xml
+++ b/android/Omnivore/app/src/main/AndroidManifest.xml
@@ -29,6 +29,17 @@
         </activity>
 
         <activity
+            android:name=".NewFlowActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Translucent">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/*" />
+            </intent-filter>
+        </activity>
+<!--
+        <activity
             android:name=".SaveActivity"
             android:exported="true">
             <intent-filter>
@@ -47,5 +58,6 @@
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
+-->
     </application>
 </manifest>
