--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -12,6 +12,7 @@ GATEWAY_URL=http://localhost:4000/api
 IMAGE_PROXY_URL=http://localhost:8080
 IMAGE_PROXY_SECRET_KEY=some-secret
 GAUTH_IOS_CLIENT_ID=
+GAUTH_ANDROID_CLIENT_ID=
 GAUTH_CLIENT_ID='notset'
 GAUTH_SECRET='notset'
 GCP_PROJECT_ID=omnivore-local
