--- a/android/Omnivore/app/build.gradle
+++ b/android/Omnivore/app/build.gradle
@@ -128,6 +128,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3-window-size-class:1.0.0-alpha16'
 
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.25.1"
 }
 
 apollo {
