Add listenedAt to Page in elastic

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -148,6 +148,9 @@
       },
       "readAt": {
         "type": "date"
+      },
+      "listenedAt": {
+        "type": "date"
       }
     }
   }
