--- a/android/Omnivore/app/build.gradle
+++ b/android/Omnivore/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "app.omnivore.omnivore"
         minSdk 23
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -22,9 +22,30 @@ android {
         }
     }
 
+    signingConfigs{
+        release{
+            keyAlias 'key0'
+            storeFile file('external/omnivore-prod.keystore')
+            storePassword 'omnivore'
+        }
+        debug{
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            storeFile file('external/omnivore-demo.keystore')
+        }
+    }
+
     buildTypes {
+        debug{
+            signingConfig signingConfigs.debug
+            buildConfigField("String", "OMNIVORE_API_URL", "\"https://api-demo.omnivore.app\"")
+            buildConfigField("String", "OMNIVORE_GAUTH_SERVER_CLIENT_ID", "\"267918240109-eu2ar09unac3lqqigluknhk7t0021b54.apps.googleusercontent.com\"")
+        }
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
+            buildConfigField("String", "OMNIVORE_API_URL", "\"https://api-prod.omnivore.app\"")
+            buildConfigField("String", "OMNIVORE_GAUTH_SERVER_CLIENT_ID", "\"687911924401-lq8j1e97n0sv3khhb8g8n368lk4dqkbp.apps.googleusercontent.com\"")
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
