--- a/packages/text-to-speech/package.json
+++ b/packages/text-to-speech/package.json
@@ -26,8 +26,11 @@
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
     "@google-cloud/pubsub": "^2.18.4",
+    "@google-cloud/storage": "^6.4.1",
     "@sentry/serverless": "^6.16.1",
     "axios": "^0.27.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "linkedom": "^0.14.12",
+    "microsoft-cognitiveservices-speech-sdk": "^1.22.0"
   }
 }
