--- a/packages/text-to-speech/package.json
+++ b/packages/text-to-speech/package.json
@@ -28,6 +28,7 @@
     "@google-cloud/storage": "^6.4.1",
     "@sentry/serverless": "^6.16.1",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.12",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0"
