--- a/packages/text-to-speech/package.json
+++ b/packages/text-to-speech/package.json
@@ -16,7 +16,7 @@
     "build": "tsc",
     "start": "functions-framework --source=build/src/ --target=textToSpeechHandler",
     "dev": "concurrently \"tsc -w\" \"nodemon --watch ./build/ --exec npm run start\"",
-    "gcloud-deploy": "gcloud functions deploy text-to-speech --gen2 --trigger-http --allow-unauthenticated --region=us-west2 --runtime nodejs14",
+    "gcloud-deploy": "gcloud functions deploy text-to-speech --gen2 --entry-point=textToSpeechHandler --trigger-http --allow-unauthenticated --region=us-west2 --runtime nodejs14",
     "deploy": "yarn build && yarn gcloud-deploy"
   },
   "devDependencies": {
