--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
     "color2k": "^2.0.0",
     "cookie": "^0.5.0",
     "diff-match-patch": "^1.0.5",
+    "downshift": "^6.1.9",
     "graphql-request": "^3.6.1",
     "kbar": "^0.1.0-beta.35",
     "nanoid": "^3.1.29",
@@ -48,6 +49,7 @@
     "react-super-responsive-table": "^5.2.1",
     "react-topbar-progress-indicator": "^4.1.1",
     "react-twitter-widgets": "^1.10.0",
+    "recent-searches": "^1.0.5",
     "swr": "^1.0.1",
     "uuid": "^8.3.2"
   },
