--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@google-cloud/storage": "^5.18.1",
     "@google-cloud/tasks": "^2.3.0",
     "@omnivore/readability": "1.0.0",
+    "@omnivore/text-to-speech-handler": "1.0.0",
     "@opentelemetry/api": "^1.0.1",
     "@opentelemetry/core": "^1.3.1",
     "@opentelemetry/exporter-jaeger": "^1.0.1",
