Add wordCount to Page doc in elastic

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -151,6 +151,9 @@
       },
       "listenedAt": {
         "type": "date"
+      },
+      "wordCount": {
+        "type": "integer"
       }
     }
   }
