--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -152,7 +152,7 @@
       "listenedAt": {
         "type": "date"
       },
-      "wordCount": {
+      "wordsCount": {
         "type": "integer"
       }
     }
