--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -61,6 +61,7 @@
     "graphql-shield": "^7.5.0",
     "highlightjs": "^9.16.2",
     "html-entities": "^2.3.2",
+    "html-to-text": "^8.2.1",
     "intercom-client": "^3.1.4",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.3",
@@ -70,6 +71,7 @@
     "luxon": "^2.3.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
     "nanoid": "^3.1.25",
+    "natural": "^5.2.3",
     "nodemailer": "^6.7.3",
     "normalize-url": "^6.1.0",
     "oauth": "^0.9.15",
@@ -105,11 +107,13 @@
     "@types/express": "^4.17.7",
     "@types/graphql-fields": "^1.3.4",
     "@types/highlightjs": "^9.12.2",
+    "@types/html-to-text": "^8.1.1",
     "@types/intercom-client": "^2.11.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/luxon": "^1.25.0",
     "@types/mocha": "^8.2.2",
     "@types/nanoid": "^3.0.0",
+    "@types/natural": "^5.1.1",
     "@types/nodemailer": "^6.4.4",
     "@types/oauth": "^0.9.1",
     "@types/private-ip": "^1.0.0",
