--- a/packages/text-to-speech/package.json
+++ b/packages/text-to-speech/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/underscore": "^1.11.4",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "@types/html-to-text": "^8.1.1",
+    "@types/natural": "^5.1.1"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
@@ -34,6 +36,8 @@
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.12",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
-    "underscore": "^1.13.4"
+    "underscore": "^1.13.4",
+    "natural": "^5.2.3",
+    "html-to-text": "^8.2.1"
   }
 }
