--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,17 @@ services:
     ports:
       - "5601:5601"
 
+  redis:
+    image: "redis:6.2.7"
+    container_name: "omnivore-redis"
+    healthcheck:
+      test: "exit 0"
+      interval: 2s
+      timeout: 12s
+      retries: 3
+    ports:
+      - "6379:6379"
+
   api:
     build:
       context: .
@@ -99,6 +110,8 @@ services:
       migrate:
         condition: service_completed_successfully
       elastic:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
   web:
