add pspdfkit android dep

--- a/android/Omnivore/settings.gradle
+++ b/android/Omnivore/settings.gradle
@@ -10,6 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url = uri("https://customers.pspdfkit.com/maven")
+        }
     }
 }
 rootProject.name = "Omnivore"
