--- a/android/Omnivore/app/build.gradle
+++ b/android/Omnivore/app/build.gradle
@@ -153,7 +153,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.25.1"
 
-    implementation("io.coil-kt:coil-compose:2.2.0")
+    implementation 'io.coil-kt:coil-compose:2.2.0'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 apollo {
