--- a/packages/content-fetch/package.json
+++ b/packages/content-fetch/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^8.5.1",
     "linkedom": "^0.14.9",
     "luxon": "^2.3.1",
-    "puppeteer-core": "^16.1.0"
+    "puppeteer-core": "^16.1.0",
+    "underscore": "^1.13.4"
   },
   "scripts": {
     "start": "node app.js",
