--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -14,6 +14,7 @@
     "linkedom": "^0.14.9",
     "luxon": "^2.3.1",
     "puppeteer-core": "^16.1.0",
+    "underscore": "^1.13.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
