Generate .d.ts files from TypeScript for text-to-speech project

--- a/packages/text-to-speech/package.json
+++ b/packages/text-to-speech/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "types": "build/src/htmlToSsml.d.ts",
   "files": [
     "build/src"
   ],
