--- a/packages/text-to-speech/tsconfig.json
+++ b/packages/text-to-speech/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "outDir": "build",
     "rootDir": ".",
-    "lib": ["dom"]
+    "lib": ["dom"],
+    // Generate d.ts files
+    "declaration": true
   },
-  "include": ["src", "test"]
+  "include": ["src"]
 }
