--- a/packages/content-fetch/package.json
+++ b/packages/content-fetch/package.json
@@ -11,7 +11,8 @@
     "linkedom": "^0.14.9",
     "luxon": "^2.3.1",
     "puppeteer-core": "^16.1.0",
-    "underscore": "^1.13.4"
+    "underscore": "^1.13.4",
+    "@omnivore/content-handler": "1.0.0"
   },
   "scripts": {
     "start": "node app.js",
