--- a/packages/content-handler/package.json
+++ b/packages/content-handler/package.json
@@ -18,9 +18,12 @@
     "eslint-plugin-prettier": "^4.0.0"
   },
   "dependencies": {
+    "addressparser": "^1.0.1",
     "axios": "^0.27.2",
     "linkedom": "^0.14.16",
     "luxon": "^3.0.4",
-    "underscore": "^1.13.6"
+    "rfc2047": "^4.0.1",
+    "underscore": "^1.13.6",
+    "uuid": "^9.0.0"
   }
 }
