--- a/packages/content-handler/package.json
+++ b/packages/content-handler/package.json
@@ -15,7 +15,12 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^4.0.0"
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-string": "^1.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^10.0.0",
+    "nock": "^13.2.9"
   },
   "dependencies": {
     "addressparser": "^1.0.1",
